--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -8,29 +8,29 @@
   unarchive: 
     src: artifact.tar.gz
     dest: /home/ubuntu/backend-app
-- name: "set Enviroment variables"
-  shell: |
-    echo "TYPEORM_CONNECTION=${TYPEORM_CONNECTION}" >> /home/ubuntu/.bashrc
-    echo "TYPEORM_ENTITIES=${TYPEORM_ENTITIES}" >> /home/ubuntu/.bashrc
-    echo "TYPEORM_HOST=${TYPEORM_HOST}" >> /home/ubuntu/.bashrc
-    echo "TYPEORM_PORT=${TYPEORM_PORT}" >> /home/ubuntu/.bashrc
-    echo "TYPEORM_USERNAME=${TYPEORM_USERNAME}" >> /home/ubuntu/.bashrc
-    echo "TYPEORM_PASSWORD=${TYPEORM_PASSWORD}" >> /home/ubuntu/.bashrc
-    echo "TYPEORM_DATABASE=${TYPEORM_DATABASE}" >> /home/ubuntu/.bashrc
-    echo "TYPEORM_MIGRATIONS=${TYPEORM_MIGRATIONS}" >> /home/ubuntu/.bashrc
-    echo "TYPEORM_MIGRATIONS_DIR=${TYPEORM_MIGRATIONS_DIR}" >> /home/ubuntu/.bashrc
-- name: "set Enviroment variables 2"
-  shell: |
-    echo "TYPEORM_CONNECTION=${TYPEORM_CONNECTION}" >>  /home/ubuntu/backend-app/.env
-    echo "TYPEORM_ENTITIES=${TYPEORM_ENTITIES}" >> /home/ubuntu/backend-app/.env
-    echo "TYPEORM_HOST=${TYPEORM_HOST}" >> /home/ubuntu/backend-app/.env
-    echo "TYPEORM_PORT=${TYPEORM_PORT}" >> /home/ubuntu/backend-app/.env
-    echo "TYPEORM_USERNAME=${TYPEORM_USERNAME}" >> /home/ubuntu/backend-app/.env
-    echo "TYPEORM_PASSWORD=password" >> /home/ubuntu/backend-app/.env
-    echo "TYPEORM_DATABASE=${TYPEORM_DATABASE}" >> /home/ubuntu/backend-app/.env
-    echo "TYPEORM_MIGRATIONS=${TYPEORM_MIGRATIONS}" >> /home/ubuntu/backend-app/.env
-    echo "TYPEORM_MIGRATIONS_DIR=${TYPEORM_MIGRATIONS_DIR}" >> /home/ubuntu/backend-app/.env
-    cp /home/ubuntu/backend-app/.env /home/ubuntu/backend-app/dist/.env
+# - name: "set Enviroment variables"
+#   shell: |
+#     echo "TYPEORM_CONNECTION=${TYPEORM_CONNECTION}" >> /home/ubuntu/.bashrc
+#     echo "TYPEORM_ENTITIES=${TYPEORM_ENTITIES}" >> /home/ubuntu/.bashrc
+#     echo "TYPEORM_HOST=${TYPEORM_HOST}" >> /home/ubuntu/.bashrc
+#     echo "TYPEORM_PORT=${TYPEORM_PORT}" >> /home/ubuntu/.bashrc
+#     echo "TYPEORM_USERNAME=${TYPEORM_USERNAME}" >> /home/ubuntu/.bashrc
+#     echo "TYPEORM_PASSWORD=${TYPEORM_PASSWORD}" >> /home/ubuntu/.bashrc
+#     echo "TYPEORM_DATABASE=${TYPEORM_DATABASE}" >> /home/ubuntu/.bashrc
+#     echo "TYPEORM_MIGRATIONS=${TYPEORM_MIGRATIONS}" >> /home/ubuntu/.bashrc
+#     echo "TYPEORM_MIGRATIONS_DIR=${TYPEORM_MIGRATIONS_DIR}" >> /home/ubuntu/.bashrc
+# - name: "set Enviroment variables 2"
+#   shell: |
+#     echo "TYPEORM_CONNECTION=${TYPEORM_CONNECTION}" >>  /home/ubuntu/backend-app/.env
+#     echo "TYPEORM_ENTITIES=${TYPEORM_ENTITIES}" >> /home/ubuntu/backend-app/.env
+#     echo "TYPEORM_HOST=${TYPEORM_HOST}" >> /home/ubuntu/backend-app/.env
+#     echo "TYPEORM_PORT=${TYPEORM_PORT}" >> /home/ubuntu/backend-app/.env
+#     echo "TYPEORM_USERNAME=${TYPEORM_USERNAME}" >> /home/ubuntu/backend-app/.env
+#     echo "TYPEORM_PASSWORD=password" >> /home/ubuntu/backend-app/.env
+#     echo "TYPEORM_DATABASE=${TYPEORM_DATABASE}" >> /home/ubuntu/backend-app/.env
+#     echo "TYPEORM_MIGRATIONS=${TYPEORM_MIGRATIONS}" >> /home/ubuntu/backend-app/.env
+#     echo "TYPEORM_MIGRATIONS_DIR=${TYPEORM_MIGRATIONS_DIR}" >> /home/ubuntu/backend-app/.env
+#     cp /home/ubuntu/backend-app/.env /home/ubuntu/backend-app/dist/.env
 - name: Install node dependencies
   shell: |
     cd /home/ubuntu/backend-app
